# SPOTAI

./: .gitignore  README.md  SpotAI-Launcher.sh  mock_hardware.py  mock_rasa_server.py  package.xml  reflector_api.py  requirements.txt  setup.py
agent/: agent_runtime.py
agent/tools/: code_tools.py  config_tools.py  motor_tools.py  system_tools.py
core/: behavior_tree_manager.py  bridge_receiver.py  config_manager.py  gpt_agent.py  i2c_driver.py  intent_engine.py  log_writer.py  memory_manager.py  mode_arbiter.py  motor_bridge.py  motor_driver.py  ros_bridge.py  statebus.py  test_ros_bridge.py
data/: config.json
data/offline_logs/: reflect_1762381528.json  reflect_1762381532.json  reflect_1762381582.json  reflect_1762381601.json  reflect_1762381621.json  reflect_1762381630.json  reflect_1762381650.json  reflect_1762381671.json  reflect_1762381747.json  reflect_1762381749.json  reflect_1762381765.json  reflect_1762381821.json  reflect_1762381867.json
launch/: spotai.launch.py
learn/: bandit_learner.py  learning_loop.py  offline_reflector.py  test_learning_cycle.py
perception/: hailo_driver.py  perception_processor.py  ros2_vision_node.py
scripts/: cooling_control.py  power_manager.py  smoke_test.py
speech/: asr_driver.py  ros2_asr_node.py  ros2_tts_node.py  speech_processor.py  tts_driver.py
ui/: emotion_mapper.py  hyperpixel_overlay.py
